feat: Add server-side health check and CORS configuration
- Creates health endpoint for connectivity monitoring
- Configures security to allow necessary CORS communication
- Ensures proper handling of OPTIONS requests
- Provides detailed system information for diagnostics